Update website and docker setup

--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
 <header>
   <div class="container header-content">
 
-    <div class="logo">
-      <i class="fas fa-bolt" style="color:orange;"></i>
-      <span>ElectroMarket</span>
-    </div>
+     <div class="logo">
+          <img src="css/images/logoimageB(1)(1).png" alt="VoltMart Logo" class="logo-img">
+        <span>VoltMart</span>
+        </div>
 
     <nav>
       <ul>
