--- a/category-item-card.html
+++ b/category-item-card.html
@@ -20,9 +20,10 @@
 
       <!-- Logo -->
       <div class="logo">
-        <i class="fas fa-laptop-code"></i>
-        <span>ElectroMarket</span>
-      </div>
+          <img src="css/images/logoimageB(1)(1).png" alt="VoltMart Logo" class="logo-img">
+        <span>VoltMart</span>
+        </div>
+
 
       <!-- Navigation -->
       <nav>
