--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
     <!-- LEFT -->
     <div class="split-auth-left">
-      <div class="brand-mini">⚡ ElectroMarket</div>
+      <div class="brand-mini">VoltMart</div>
 
       <h2>Welcome Back!</h2>
       <p>
