--- a/cart.html
+++ b/cart.html
@@ -7,57 +7,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        /* Debug styles */
-        .debug-panel {
-            background: #f8f9fa;
-            border: 2px dashed #dc3545;
-            border-radius: 8px;
-            padding: 15px;
-            margin: 20px 0;
-            text-align: center;
-        }
-        .debug-btn {
-            margin: 5px;
-            font-size: 14px;
-        }
-    </style>
-</head>
 <body>
+
 <header>
-  <div class="container header-content">
-    <div class="logo">
-      <i class="fa-solid fa-code"></i>
-      <span>ElectroMarket</span>
-    </div>
+  <div class="container">
+    <div class="header-content">
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="category-item-card.html">Categories</a></li>
-        <li><a href="sell-items.html">Sell Item</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+      <!-- Logo -->
+      <div class="logo">
+        <img src="css/images/logoimageB(1)(1).png" alt="VoltMart Logo" class="logo-img">
+        <span>VoltMart</span>
+      </div>
 
-    <div class="header-right-buttons">
-      <button class="btn btn-outline cart-button" onclick="window.location.href='cart.html'">
-        <i class="fa-solid fa-cart-shopping"></i> Cart
-        <span class="cart-count">0</span>
-      </button>
-      
-      <div class="auth-buttons">
-        <a href="login.html" class="btn btn-outline">
-          <i class="fa-solid fa-right-to-bracket"></i> Login
+      <!-- Navigation -->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="category-item-card.html">Categories</a></li>
+          <li><a href="sell-items.html">Sell Item</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+
+      <!-- Right buttons -->
+      <div class="header-right-buttons">
+
+        <!-- CART BUTTON -->
+        <a href="cart.html" class="btn btn-outline cart-button">
+          <i class="fa-solid fa-cart-shopping"></i> Cart
+          <span class="cart-count">0</span>
         </a>
-        <a href="signUp.html" class="btn btn-primary">
-          <i class="fa-solid fa-user-plus"></i> Sign Up
-        </a>
+
+        <div class="auth-buttons">
+          <a href="login.html" class="btn btn-outline">
+            <i class="fa-solid fa-right-to-bracket"></i> Login
+          </a>
+          <a href="signup.html" class="btn btn-primary">
+            <i class="fa-solid fa-user-plus"></i> Sign Up
+          </a>
+        </div>
+
       </div>
     </div>
   </div>
 </header>
+
 
 <!-- Cart Page -->
 <section class="section cart-page">
