--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   <div class="container">
     <div class="header-content">
 
-      <!-- Logo -->
-      <div class="logo">
-        <i class="fas fa-laptop-code"></i>
-        <span>ElectroMarket</span>
-      </div>
+            <div class="logo">
+          <img src="css/images/logoimageB(1)(1).png" alt="VoltMart Logo" class="logo-img">
+        <span>VoltMart</span>
+        </div>
 
       <!-- Navigation -->
       <nav>
