--- a/sell-items.html
+++ b/sell-items.html
@@ -19,9 +19,9 @@
 
       <!-- Logo -->
       <div class="logo">
-        <i class="fas fa-laptop-code"></i>
-        <span>ElectroMarket</span>
-      </div>
+          <img src="css/images/logoimageB(1)(1).png" alt="VoltMart Logo" class="logo-img">
+        <span>VoltMart</span>
+        </div>
 
       <!-- Navigation -->
       <nav>
